--- a/EMS/admin-ui-bundle/assets/css/admin-lte/plugins/_mixins.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/plugins/_mixins.scss
@@ -1,17 +1,19 @@
 // General: Mixins
 
+@use "sass:color";
+
 // Select2 Variant
 @mixin select2-variant($name, $color) {
   .select2-#{$name} {
     + .select2-container--default {
       &.select2-container--open {
         .select2-selection--single {
-          border-color: lighten($color, 25%);
+          border-color: color.adjust($color, $lightness: 25%);
         }
       }
 
       &.select2-container--focus .select2-selection--single {
-        border-color: lighten($color, 25%);
+        border-color: color.adjust($color, $lightness: 25%);
       }
     }
 
@@ -22,7 +24,7 @@
       .select2-search--inline {
         .select2-search__field {
           &:focus {
-            border: $input-border-width solid lighten($color, 25%);
+            border: $input-border-width solid color.adjust($color, $lightness: 25%);
           }
         }
       }
@@ -44,7 +46,7 @@
       & {
         .select2-selection--multiple {
           &:focus {
-            border-color: lighten($color, 25%);
+            border-color: color.adjust($color, $lightness: 25%);
           }
 
           .select2-selection__choice {
@@ -63,7 +65,7 @@
         }
 
         &.select2-container--focus .select2-selection--multiple {
-          border-color: lighten($color, 25%);
+          border-color: color.adjust($color, $lightness: 25%);
         }
       }
     }
