--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_colors.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_colors.scss
@@ -1,5 +1,7 @@
 // Misc: Colors
 
+@use "sass:color";
+
 // Background colors (theme colors)
 @each $name, $color in $theme-colors {
   @include background-variant($name, $color);
@@ -31,8 +33,8 @@
 }
 
 .bg-gray-light {
-  background-color: lighten($gray-200, 3%);
-  color: color-contrast(lighten($gray-200, 3%)) !important;
+  background-color: color.adjust($gray-200, $lightness: 3%);
+  color: color-contrast(color.adjust($gray-200, $lightness: 3%)) !important;
 }
 
 .bg-black {
@@ -80,7 +82,7 @@ a.text-muted:hover {
 
   &:hover,
   &:focus {
-    color: lighten($gray-500, 20%);
+    color: color.adjust($gray-500, $lightness: 20%);
   }
 }
 
@@ -105,7 +107,7 @@ a.text-muted:hover {
 
 @include dark-mode {
   .bg-light {
-    background-color: lighten($dark, 7.5%) !important;
+    background-color: color.adjust($dark, $lightness: 7.5%) !important;
     color: $white !important;
   }
 
@@ -155,6 +157,6 @@ a.text-muted:hover {
   }
 
   .border-dark {
-    border-color: lighten($dark, 10%) !important;
+    border-color: color.adjust($dark, $lightness: 10%) !important;
   }
 }
