--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_direct-chat.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_direct-chat.scss
@@ -1,5 +1,7 @@
 // Component: Direct Chat
 
+@use "sass:color";
+
 .direct-chat {
   .card-body {
     overflow-x: hidden;
@@ -16,7 +18,7 @@
 
   &.timestamp-light {
     .direct-chat-timestamp {
-      color: lighten(color-contrast($yiq-text-light), 10%);
+      color: color.adjust(color-contrast($yiq-text-light), $lightness: 10%);
     }
   }
 
@@ -229,13 +231,13 @@
 
 @include dark-mode {
   .direct-chat-text {
-    background-color: lighten($dark, 7.5%);
-    border-color: lighten($dark, 10%);
+    background-color: color.adjust($dark, $lightness: 7.5%);
+    border-color: color.adjust($dark, $lightness: 10%);
     color: $white;
 
     &::after,
     &::before {
-      border-right-color: lighten($dark, 10%);
+      border-right-color: color.adjust($dark, $lightness: 10%);
     }
   }
 
