--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_forms.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_forms.scss
@@ -1,5 +1,7 @@
 // Component: Forms
 
+@use "sass:color";
+
 .form-group {
   &.has-icon {
     position: relative;
@@ -229,9 +231,9 @@ textarea.form-control {
 
   &:checked {
     ~ .custom-control-label::before {
-      @include gradient-bg(lighten(map-get($theme-colors, "warning"), 10%));
+      @include gradient-bg(color.adjust(map-get($theme-colors, "warning"), $lightness: 10%));
 
-      border-color: lighten(map-get($theme-colors, "warning"), 10%);
+      border-color: color.adjust(map-get($theme-colors, "warning"), $lightness: 10%);
     }
   }
 
@@ -339,27 +341,27 @@ body.text-sm {
 .navbar-dark {
   .btn-navbar,
   .form-control-navbar {
-    background-color: lighten($sidebar-dark-bg, 5%);
-    border: 1px solid lighten($sidebar-dark-bg, 15%);
-    color: lighten(color-contrast(lighten($sidebar-dark-bg, 5%)), 15%);
+    background-color: color.adjust($sidebar-dark-bg, $lightness: 5%);
+    border: 1px solid color.adjust($sidebar-dark-bg, $lightness: 15%);
+    color: color.adjust(color-contrast(color.adjust($sidebar-dark-bg, $lightness: 5%)), $lightness: 15%);
   }
 
   .btn-navbar {
     &:hover {
-      background-color: lighten($sidebar-dark-bg, 7.5%);
+      background-color: color.adjust($sidebar-dark-bg, $lightness: 7.5%);
     }
 
     &:focus {
-      background-color: lighten($sidebar-dark-bg, 10%);
+      background-color: color.adjust($sidebar-dark-bg, $lightness: 10%);
     }
   }
 
   .form-control-navbar + .input-group-prepend,
   .form-control-navbar + .input-group-append {
     > .btn-navbar {
-      background-color: lighten($sidebar-dark-bg, 5%);
+      background-color: color.adjust($sidebar-dark-bg, $lightness: 5%);
       color: $white;
-      border: 1px solid lighten($sidebar-dark-bg, 15%);
+      border: 1px solid color.adjust($sidebar-dark-bg, $lightness: 15%);
       border-left: none;
     }
   }
@@ -402,7 +404,7 @@ body.text-sm {
 
   .custom-control-input:disabled ~ .custom-control-label::before,
   .custom-control-input[disabled] ~ .custom-control-label::before {
-    background-color: lighten($dark, 5%);
+    background-color: color.adjust($dark, $lightness: 5%);
     border-color: $gray-600;
     color: $white;
   }
@@ -421,15 +423,15 @@ body.text-sm {
 
   .custom-range {
     &::-webkit-slider-runnable-track {
-      background-color: lighten($dark, 7.5%);
+      background-color: color.adjust($dark, $lightness: 7.5%);
     }
 
     &::-moz-range-track {
-      background-color: lighten($dark, 7.5%);
+      background-color: color.adjust($dark, $lightness: 7.5%);
     }
 
     &::-ms-track {
-      background-color: lighten($dark, 7.5%);
+      background-color: color.adjust($dark, $lightness: 7.5%);
     }
 
     @each $name, $color in $theme-colors-alt {
