--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_table.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_table.scss
@@ -1,5 +1,7 @@
 // Component: Table
 
+@use "sass:color";
+
 .table {
   &:not(.table-dark) {
     color: inherit;
@@ -157,7 +159,7 @@
   .table-hover {
     tbody tr:hover {
       color: $gray-300;
-      background-color: lighten($dark, 2.5%);
+      background-color: color.adjust($dark, $lightness: 2.5%);
       border-color: $gray-600;
     }
   }
@@ -174,7 +176,7 @@
 
     &.table-head-fixed {
       thead tr:nth-child(1) th {
-        background-color: lighten($dark, 5%);
+        background-color: color.adjust($dark, $lightness: 5%);
       }
     }
   }
