--- a/EMS/admin-ui-bundle/assets/css/admin-lte/mixins/_accent.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/mixins/_accent.scss
@@ -1,5 +1,7 @@
 // Mixins: accent
 
+@use "sass:color";
+
 /* Accent Variant */
 @mixin accent-variant($name, $color) {
   $link-color: $color;
@@ -44,7 +46,7 @@
     .custom-select:focus,
     .custom-control-input:focus:not(:checked) ~ .custom-control-label::before,
     .custom-file-input:focus ~ .custom-file-label {
-      border-color: lighten($color, 25%);
+      border-color: color.adjust($color, $lightness: 25%);
     }
 
     .page-item {
@@ -100,7 +102,7 @@
         .page-link {
           &:hover,
           &:focus {
-            color: lighten($link-color, 5%);
+            color: color.adjust($link-color, $lightness: 5%);
           }
         }
       }
