--- a/EMS/admin-ui-bundle/assets/css/admin-lte/mixins/_custom-forms.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/mixins/_custom-forms.scss
@@ -1,5 +1,7 @@
 // Mixins: Custom Forms
 
+@use "sass:color";
+
 // Custom Switch Variant
 @mixin custom-switch-variant($name, $color) {
   &.custom-switch-off-#{$name} {
@@ -28,7 +30,7 @@
     }
 
     .custom-control-input:checked ~ .custom-control-label::after {
-      background-color: lighten($color, 30%);
+      background-color: color.adjust($color, $lightness: 30%);
     }
   }
 }
@@ -56,7 +58,7 @@
       background-color: $color;
 
       &:active {
-        background-color: lighten($color, 35%);
+        background-color: color.adjust($color, $lightness: 35%);
       }
     }
 
@@ -64,7 +66,7 @@
       background-color: $color;
 
       &:active {
-        background-color: lighten($color, 35%);
+        background-color: color.adjust($color, $lightness: 35%);
       }
     }
 
@@ -72,7 +74,7 @@
       background-color: $color;
 
       &:active {
-        background-color: lighten($color, 35%);
+        background-color: color.adjust($color, $lightness: 35%);
       }
     }
   }
@@ -112,12 +114,12 @@
     }
 
     &:focus:not(:checked) ~ .custom-control-label::before {
-      border-color: lighten($color, 25%);
+      border-color: color.adjust($color, $lightness: 25%);
     }
 
     &:not(:disabled):active ~ .custom-control-label::before {
-      background-color: lighten($color, 35%);
-      border-color: lighten($color, 35%);
+      background-color: color.adjust($color, $lightness: 35%);
+      border-color: color.adjust($color, $lightness: 35%);
     }
   }
 }
