--- a/EMS/admin-ui-bundle/assets/css/admin-lte/plugins/_daterangepicker.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/plugins/_daterangepicker.scss
@@ -1,20 +1,22 @@
+@use "sass:color";
+
 @include dark-mode {
   .daterangepicker {
-    background-color: lighten($dark, 5%);
+    background-color: color.adjust($dark, $lightness: 5%);
     border: inherit;
 
     &::before,
     &::after {
-      border-bottom-color: lighten($dark, 5%);
+      border-bottom-color: color.adjust($dark, $lightness: 5%);
     }
 
     td.available:hover,
     th.available:hover {
-      background-color: lighten($dark, 5%);
+      background-color: color.adjust($dark, $lightness: 5%);
     }
 
     td.in-range {
-      background-color: lighten($dark, 10%);
+      background-color: color.adjust($dark, $lightness: 10%);
       color: $white;
     }
 
@@ -31,22 +33,22 @@
     }
 
     &.show-ranges.ltr .drp-calendar {
-      border-color: lighten($dark, 10%);
+      border-color: color.adjust($dark, $lightness: 10%);
 
       &.left,
       &.right {
-        border-color: lighten($dark, 10%);
+        border-color: color.adjust($dark, $lightness: 10%);
         padding-top: 0;
       }
     }
 
     .drp-buttons {
-      border-color: lighten($dark, 10%);
+      border-color: color.adjust($dark, $lightness: 10%);
     }
 
     .calendar-table {
       background-color: $dark;
-      border-color: lighten($dark, 10%);
+      border-color: color.adjust($dark, $lightness: 10%);
 
       th,
       td {
@@ -64,7 +66,7 @@
     select.secondselect,
     select.ampmselect {
       background-color: $dark;
-      border-color: lighten($dark, 10%);
+      border-color: color.adjust($dark, $lightness: 10%);
     }
   }
 }
