--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_cards.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_cards.scss
@@ -436,7 +436,7 @@ html.maximized-card {
     }
 
     &.done {
-      color: darken($gray-500, 25%);
+      color: color.adjust($gray-500, $lightness: -25%);
 
       .text {
         font-weight: 500;
