--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_variables.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_variables.scss
@@ -88,11 +88,11 @@ $main-header-dark-form-control-focused-color: $gray-400 !default;
 $main-header-dark-form-control-border-color: $gray-600 !default;
 $main-header-dark-form-control-focused-border-color: $gray-600 !default;
 $main-header-dark-placeholder-color: rgba($white, .6) !default;
-$main-header-light-form-control-bg: darken($gray-200, 5%) !default;
-$main-header-light-form-control-focused-bg: darken($gray-200, 7.5%) !default;
+$main-header-light-form-control-bg: color.adjust($gray-200, $lightness: -5%) !default;
+$main-header-light-form-control-focused-bg: color.adjust($gray-200, $lightness: -7.5%) !default;
 $main-header-light-form-control-focused-color: $gray-400 !default;
 $main-header-light-form-control-border-color: $gray-400 !default;
-$main-header-light-form-control-focused-border-color: darken($gray-400, 2.5%) !default;
+$main-header-light-form-control-focused-border-color: color.adjust($gray-400, $lightness: -2.5%) !default;
 $main-header-light-placeholder-color: rgb(0 0 0 / 60%) !default;
 
 // MAIN FOOTER
