--- a/EMS/admin-ui-bundle/assets/css/admin-lte/plugins/_daterangepicker.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/plugins/_daterangepicker.scss
@@ -24,7 +24,7 @@
     td.off.in-range,
     td.off.start-date,
     td.off.end-date {
-      background-color: darken($dark, 5%);
+      background-color: color.adjust($dark, $lightness: -5%);
       color: $white;
     }
 
