--- a/EMS/admin-ui-bundle/assets/css/admin-lte/plugins/_mapael.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/plugins/_mapael.scss
@@ -1,5 +1,7 @@
 // Plugins: jQuery Mapael
 
+@use "sass:color";
+
 .mapael {
   .map {
     position: relative;
@@ -48,8 +50,8 @@
     &:hover,
     &:active,
     &.hover {
-      background-color: darken($button-default-background-color, 5%);
-      color: darken($button-default-color, 10%);
+      background-color: color.adjust($button-default-background-color, $lightness: -5%);
+      color: color.adjust($button-default-color, $lightness: -10%);
     }
   }
 
