ref: max decimal

--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_print.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_print.scss
@@ -36,7 +36,7 @@
 
   .invoice-col {
     float: left;
-    width: 33.3333333%;
+    width: 33.3333%;
   }
 
   // Make sure table content displays properly
